<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_navy_blue"
    android:orientation="vertical"
    android:padding="@dimen/parent_padding"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_gap"
        android:gravity="center"
        android:text="@string/title_app"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/medium_gap"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/medium_navy_blue"
        app:cardCornerRadius="@dimen/parent_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/medium_navy_blue"
            android:orientation="vertical"
            android:padding="@dimen/parent_padding">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginBottom="@dimen/medium_gap"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weight_input_text"
                    style="@style/TextAppearance.MaterialComponents.Headline3"
                    android:layout_width="@dimen/text_size_input"
                    android:layout_height="wrap_content"
                    android:hint="@string/_70"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:text="@string/kg"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:padding="@dimen/medium_gap"
        app:cardBackgroundColor="@color/medium_navy_blue"
        app:cardCornerRadius="@dimen/parent_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/medium_navy_blue"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Height"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/height_input_text"
                    style="@style/TextAppearance.MaterialComponents.Headline3"
                    android:layout_width="@dimen/text_size_input"
                    android:layout_height="wrap_content"
                    android:hint="160"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cm"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/parent_padding"
        android:padding="@dimen/medium_gap"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/medium_navy_blue"
        app:cardCornerRadius="@dimen/parent_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="@dimen/parent_padding">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:id="@+id/result_ibm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/medium_gap"
                tools:text="@string/result_ibm"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:id="@+id/result_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/result_healthy"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_description_healthy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/result_description"
                android:textColor="@color/gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>